Fixed smartmenus logo visualization in collapsed menu

--- a/menu/smartmenus/css/sm-core-css.css
+++ b/menu/smartmenus/css/sm-core-css.css
@@ -17,18 +17,34 @@
  */
 #sm-menu{
     position: fixed;
-    top: 40px;
+    top: 41px;
     left: 0;
     z-index: 10;
     width: 100%;
     overflow-y: scroll;
     max-height: 350px;
 }
-#collapse-menu-button {
-    z-index: 15;
+
+#collapse-menu-wrapper{
     position: fixed;
     top: 0;
-    left:0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+}
+#collapse-menu-logo {
+    display: block;
+    padding-top: 8px;
+    margin-left: 22px;
+    margin-right: 22px;
+    float: left;
+    z-index: 20;
+    max-height:31px;
+    height:31px;
+}
+#collapse-menu-button {
+    z-index: 15;
+    display: block;
     width: 100%;
     background: #eeeeee;
     text-decoration: none;
@@ -38,11 +54,11 @@
     padding-bottom: 2px;
     padding-left: 25px;
     vertical-align: middle;
-    max-height:30px;
-    height:30px;
+    max-height:31px;
+    height:31px;
 }
 
-#sm-menu.collapsed {
+#sm-menu.collapsed, #smartmenu-logo {
     display: none;
 }
 #sm-menu #logout-link, #sm-menu #user-link, #sm-menu #users-link {
@@ -50,17 +66,18 @@
 }
 @media (min-width: 768px) {
     /* hide the button in desktop view */
-    #collapse-menu-button {
+    #collapse-menu-button, #collapse-menu-logo {
         display: none;
     }
-    /* always show the menu in desktop view */
-    #sm-menu.collapsed {
-        display: block;
-    }
+
     #sm-menu {
         top: 0;
         max-height: none;
         overflow-y: visible;
+    }
+
+    #sm-menu.collapsed, #smartmenu-logo{
+        display: block;
     }
 
     #sm-menu #logout-link, #sm-menu #user-link, #sm-menu #users-link {
@@ -72,7 +89,7 @@
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-#smartmenu-logo >a >img {
+#smartmenu-logo >a >img, #collapse-menu-logo >img{
     /* Trick for IE */
     border-width: 0;
 }
